Fixed layout problems

--- a/css/default.css
+++ b/css/default.css
@@ -87,6 +87,10 @@ div{
 	text-align: center;
 }
 
+#feedbackmsg{
+	float: inherit;
+}
+
 /*Alerts*/
 #alerts{
 
